# laebelmaker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  demo.py  docker-compose.yml  generate-notes.sh  labelmaker.py  pyproject.toml  requirements-dev.txt  requirements.txt  update-requirements.sh
.claude/: settings.json
.claude/commands/: commit.md  release.md
.github/workflows/: publish-to-pypi.yml  python-app.yml
examples/: docker-compose-with-build.yaml  invalid-image-tag.yml  invalid-image.yml  invalid-services.yaml  not-a-yaml.yml  traefik.toml  traefik.yml
examples/webapp/: db.Dockerfile  init.sql
label/: label.py
laebelmaker/: __main__.py  cli.py  datatypes.py  errors.py  label.py
laebelmaker/utils/: formatter.py  input.py  loader.py  traefik_config.py
src/: __main__.py  laebelmaker.py
src/util/: __init__.py  datatypes.py  formatter.py  input.py  label.py  loader.py
src/utils/: datatypes.py  errors.py  input.py  label.py
tests/: test_cli.py  test_compose.py  test_datatypes.py  test_formatter.py  test_label.py  test_traefik_config.py
util/: formatter.py  label.py  loader.py
