[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laebelmaker"
version = "0.3.0"
description = "Generate traefik labels easily"
readme = "README.md"
authors = [{ name = "Ivan Bratović", email = "ivanbratovic4@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["traefik", "label", "generate"]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pylint", "mypy", "types-PyYAML", "pre-commit", "docker", "pytest"]
docker = ["docker"]

[project.urls]
Homepage = "https://github.com/ivanbratovic/laebelmaker"

[project.scripts]
laebelmaker = "laebelmaker:main"
