[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laebelmaker"
version = "0.4.1"
description = "Generate traefik labels easily"
readme = "README.md"
authors = [{ name = "Ivan Bratović", email = "ivanbratovic4@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: System :: Systems Administration",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
keywords = ["traefik", "label", "generate"]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pylint", "mypy", "types-PyYAML", "pre-commit", "docker", "pytest"]
docker = ["docker"]

[project.urls]
Homepage = "https://github.com/ivanbratovic/laebelmaker"

[project.scripts]
laebelmaker = "laebelmaker.cli:main"
